--- a/templates/Mappingpage.html
+++ b/templates/Mappingpage.html
@@ -7,12 +7,16 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
       crossorigin=""/>
+      <link rel="stylesheet" href="./MarkerCluster.css" />
+
 
       <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
   crossorigin=""></script>
 
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OverlappingMarkerSpiderfier-Leaflet/0.2.6/oms.min.js"></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/"></script>
+      <script src="./leaflet.markercluster.js"></script>
   <style>
 		html, body {
 			height: 100%;
@@ -60,12 +64,61 @@
       fillOpacity: 0.8
   };
 
-
-  L.geoJSON(hey, {
-      pointToLayer: function (feature, latlng) {
-          return L.circleMarker(latlng, geojsonMarkerOptions);
+  function onEachFeature(feature, layer) {
+      // does this feature have a property named popupContent?
+      if (feature.properties && feature.properties.issueddate) {
+          layer.bindPopup(feature.properties.issueddate + feature.properties.contractorname);
       }
-  }).addTo(map);
+  }
+// //Code for silly easy geoJSON Labels
+//   L.geoJSON(hey, {
+//
+//       pointToLayer: function (feature, latlng) {
+//           return L.circleMarker(latlng, geojsonMarkerOptions);
+//       },
+//       onEachFeature: onEachFeature
+//   }).addTo(map);
+
+var clusty = L.geoJson(hey, {
+  pointToLayer: function(feature,latlng){
+    var marker = L.marker(latlng);
+    marker.bindPopup(feature.properties.issueddate);
+    //var clusters = L.markerClusterGroup();
+    //map.addLayer(clusters);
+    return marker;
+
+  }
+  //var clusters = L.markerClusterGroup();
+  //clusters.addLayer(clusty)
+   //map.addLayer(clusters);
+}).addTo(map);
+// var clusters = L.markerClusterGroup();
+//clusters.addLayer(clusty);
+//  map.addLayer(clusters);
+
+
+
+
+// $.getJSON("https://data.calgary.ca/resource/c2es-76ed.json",function(data){
+//     var ratIcon = L.icon({
+//       iconUrl: 'http://andywoodruff.com/maptime-leaflet/rat.png',
+//       iconSize: [60,50]
+//     });
+//     var rodents = L.geoJson(data,{
+//       pointToLayer: function(feature,latlng){
+//         var marker = L.marker(latlng,{icon: ratIcon});
+//         marker.bindPopup(feature.properties.issueddate);
+//         return marker;
+//       }
+//     });
+//     var clusters = L.markerClusterGroup();
+//     clusters.addLayer(rodents);
+//     map.addLayer(clusters);
+//   });
+
+
+
+
 
 
 
