added little bump script

--- a/templates/Mappingpage.html
+++ b/templates/Mappingpage.html
@@ -86,8 +86,9 @@ var clusty = L.geoJson(hey, {
     //var clusters = L.markerClusterGroup();
     //map.addLayer(clusters);
     return marker;
-
+    onEachFeature: onEachFeature
   }
+
   //var clusters = L.markerClusterGroup();
   //clusters.addLayer(clusty)
    //map.addLayer(clusters);
