--- a/templates/Mappingpage.html
+++ b/templates/Mappingpage.html
@@ -33,6 +33,9 @@
       background-color: teal;
       color: white;
     }
+    h1, h2{
+      font-family: Arial, Helvetica, sans-serif;
+    }
 	</style>
   </head>
   <body>
@@ -73,7 +76,7 @@
   function onEachFeature(feature, layer) {
       // does this feature have a property named popupContent?
       if (feature.properties && feature.properties.issueddate) {
-          layer.bindPopup(feature.properties.issueddate + feature.properties.contractorname);
+          layer.bindPopup(feature.properties.issueddate + "<br>" + feature.properties.contractorname+ "<br>" + feature.properties.workclassgroup + "<br>" + feature.properties.communityname + "<br>" + feature.properties.originaladdress);
       }
   }
 //Code for silly easy geoJSON Labels
@@ -99,31 +102,6 @@
 //   //clusters.addLayer(clusty)
 //    //map.addLayer(clusters);
 // }).addTo(map);
-// var clusters = L.markerClusterGroup();
-//clusters.addLayer(clusty);
-//  map.addLayer(clusters);
-
-
-
-
-// $.getJSON("https://data.calgary.ca/resource/c2es-76ed.json",function(data){
-//     var ratIcon = L.icon({
-//       iconUrl: 'http://andywoodruff.com/maptime-leaflet/rat.png',
-//       iconSize: [60,50]
-//     });
-//     var rodents = L.geoJson(data,{
-//       pointToLayer: function(feature,latlng){
-//         var marker = L.marker(latlng,{icon: ratIcon});
-//         marker.bindPopup(feature.properties.issueddate);
-//         return marker;
-//       }
-//     });
-//     var clusters = L.markerClusterGroup();
-//     clusters.addLayer(rodents);
-//     map.addLayer(clusters);
-//   });
-
-
 
 
 
