--- a/templates/Mappingpage.html
+++ b/templates/Mappingpage.html
@@ -66,7 +66,7 @@
 
   var geojsonMarkerOptions = {
       radius: 8,
-      fillColor: "#ff7800",
+      fillColor: "#008080",
       color: "#000",
       weight: 1,
       opacity: 1,
